--- a/JavaScript Practice/08-01-2021/style.css
+++ b/JavaScript Practice/08-01-2021/style.css
@@ -1,17 +1,31 @@
-img    /*Set Image Height & Width*/
-{
-	width: 215px;
-	height: 315px; 
-}
 .inline-block /*Set Image Into Oneline */
 {
 	display: inline-block;
-	background-color: yellow;
+}
+.block-section
+{
+	background-color: black;
 	margin-right: 1%;
+	width: 215px;
+	height: 315px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
 }
 .maindiv /*Give margin for proper visible in center*/
 {
-	margin-top: 4%;
-	margin-left: 16%;
-	margin-right: 16.7%;
+	margin-top: 10%;
+	text-align: center;
+}
+.paragraph
+{
+	text-align: center;
+	display: block;
+	background-color: lightgrey;
+	color: darkgrey;
+}
+.paragraph1
+{
+	margin : 1% 19% 0;
 }
